@@ -37,6 +37,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{534, 82}, {1014, 1082}}</string>
+	<string>{{578, 74}, {1154, 1100}}</string>
 </dict>
 </plist>
